--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Sparlex - Spa Website Template</title>
+        <title>Beautify Salon</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -46,9 +46,9 @@
                     <div class="row align-items-center">
                         <div class="col-lg-8">
                             <div class="d-flex flex-wrap">
-                                <a href="#" class="me-4 text-light"><i class="fas fa-map-marker-alt text-primary me-2"></i>Find A Location</a>
-                                <a href="#" class="me-4 text-light"><i class="fas fa-phone-alt text-primary me-2"></i>+01234567890</a>
-                                <a href="#" class="text-light"><i class="fas fa-envelope text-primary me-2"></i>Example@gmail.com</a>
+                                <a href="#" class="me-4 text-light"><i class="fas fa-map-marker-alt text-primary me-2"></i>Temukan lokasi</a>
+                                <a href="#" class="me-4 text-light"><i class="fas fa-phone-alt text-primary me-2"></i>+62xxxxxxxxxx</a>
+                                <a href="#" class="text-light"><i class="fas fa-envelope text-primary me-2"></i>Beautify@gmail.com</a>
                             </div>
 
                         </div>
@@ -67,32 +67,32 @@
                 <div class="container px-0">
                     <nav class="navbar navbar-light navbar-expand-xl">
                         <a href="index.html" class="navbar-brand">
-                            <h1 class="text-primary display-4">Sparlex</h1>
+                            <h1 class="text-primary display-4">Beautify</h1>
                         </a>
                         <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                             <span class="fa fa-bars text-primary"></span>
                         </button>
                         <div class="collapse navbar-collapse bg-light py-3" id="navbarCollapse">
                             <div class="navbar-nav mx-auto border-top">
-                                <a href="index.html" class="nav-item nav-link">Home</a>
+                                <a href="index.html" class="nav-item nav-link active">Home</a>
                                 <a href="about.html" class="nav-item nav-link">About</a>
-                                <a href="service.html" class="nav-item nav-link">Services</a>
-                                <a href="price.html" class="nav-item nav-link">Price</a>
+                                <a href="service.html" class="nav-item nav-link">Layanan</a>
+                                <a href="price.html" class="nav-item nav-link">Price List</a>
                                 <div class="nav-item dropdown">
-                                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                     <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                        <a href="team.html" class="dropdown-item active">Team</a>
+                                        <a href="team.html" class="dropdown-item">Team</a>
                                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                         <a href="gallery.html" class="dropdown-item">Gallery</a>
-                                        <a href="appointment.html" class="dropdown-item">Appointment</a>
-                                        <a href="404.html" class="dropdown-item">404 page</a>
+                                        <a href="appointment.html" class="dropdown-item">Reservasi</a>
+                                        <!-- <a href="404.html" class="dropdown-item">404 page</a> -->
                                     </div>
                                 </div>
-                                <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                                <a href="contact.html" class="nav-item nav-link">Hubungi Kami</a>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap pt-xl-0">
                                 <button class="btn-search btn btn-primary btn-primary-outline-0 rounded-circle btn-lg-square" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search"></i></button>
-                                <a href="index.html" class="btn btn-primary btn-primary-outline-0 rounded-pill py-3 px-4 ms-4">Book Appointment</a>
+                                <a href="appointment.html" class="btn btn-primary btn-primary-outline-0 rounded-pill py-3 px-4 ms-4">Reservasi</a>
                             </div>
                         </div>
                     </nav>
